# LiteVideoPlayer

./: CMakeLists.txt
android/player/: settings.gradle
android/player/app/: build.gradle
android/player/app/src/androidTest/java/com/lvp/player/: ExampleInstrumentedTest.java
android/player/app/src/main/: AndroidManifest.xml
android/player/app/src/main/java/com/lvp/player/: MainActivity.java
android/player/app/src/main/res/layout/: activity_main.xml
android/player/app/src/test/java/com/lvp/player/: ExampleUnitTest.java
android/player/core/: build.gradle
android/player/core/src/androidTest/java/com/lvp/core/: ExampleInstrumentedTest.java
android/player/core/src/main/: AndroidManifest.xml
android/player/core/src/main/cpp/: CMakeLists.txt  android_audio_render.c  android_video_render.c  core.cpp
android/player/core/src/main/java/com/lvp/core/: AudioTrackRender.java  LvpNative.java  LvpPlayerView.java
android/player/core/src/test/java/com/lvp/core/: ExampleUnitTest.java
android/player/gradle/wrapper/: gradle-wrapper.properties
src/cache/: lvp_cache_module.c  lvp_cache_module.h
src/core/: lvp.c  lvp.h  lvp_avsync.c  lvp_condition.c  lvp_condition.h  lvp_config.h  lvp_core.c  lvp_core.h  lvp_events.h  lvp_log.c  lvp_module.c  lvp_modules.h  lvp_mutex.c  lvp_pkt.c  lvp_pkt.h  lvp_profile.c  lvp_semaphore.c  lvp_semaphore.h  lvp_thread.c  lvp_thread.h  lvp_time.c  lvp_win32_config.h
src/decoder/: lvp_decoder.c  lvp_decoder.h  lvp_hwaccel_decoder.c
src/filter/: lvp_audio_resample.c  lvp_pkt_filter.c  lvp_pkt_filter.h
src/reader/: lvp_reader_module.c  lvp_reader_module.h
src/render/: lvp_audio_render.c  lvp_video_render.c  lvp_video_render.h
